<resources>
    <string name="app_name">Calc</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_production">×</string>
    <string name="key_divide">÷</string>
    <string name="key_equal">=</string>
    <string name="key_AC">AC</string>
    <string name="key_MS">MS</string>
    <string name="key_MR">MR</string>
    <string name="key_MC">MC</string>
    <string name="key_plus_minus">±</string>
    <string name="key_percent">%</string>
    <string name="key_sqrt">√</string>
    <string name="calc_screen_init_value">0</string>
    <string name="change_theme">Переключить тему</string>
    <string name="settings">Настройки</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="apply_settings">Применить</string>
</resources>