<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin_padding"
        android:layout_marginEnd="@dimen/double_margin_padding"
        android:text="@string/apply_settings" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@id/light_theme"
        android:layout_marginStart="@dimen/standard_margin_padding"
        android:layout_marginEnd="@dimen/standard_margin_padding">

        <Button
            android:id="@+id/light_theme"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/light_theme" />

        <Button
            android:id="@+id/dark_theme"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>